--- a/_posts/2019-03-03-homework1.md
+++ b/_posts/2019-03-03-homework1.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: Homework1
-categories: SYSU, 系统分析与设计, Homework
+categories: SYSU 系统分析与设计
 description: 软件的本质与软件工程科学部分作业
-keywords: 系统分析与设计, SYSU
+keywords: 系统分析与设计, SYSU, Homework
 ---
 
 ## 1. 简答题
