--- a/_posts/2019-03-15-homework2.md
+++ b/_posts/2019-03-15-homework2.md
@@ -32,7 +32,7 @@ keywords: 系统分析与设计, SYSU, Homework
   > * 质量：软件质量通常是有底线的。一些指标如可靠性、性能等，比较难量化度量；另一些指标如易用性相对比较灵活，但其对于用户满意度的敏感度很高。
   > * 范围：在多数情况下，客户与开发者能就项目 20% 的内容给出严格的需求约定，剩下 80% 的内容都是相对模糊的。因此，围绕客户目标，发现并满足客户的兴趣与需求是最关键的。
   >
-  > 正是由于软件本质的四个特性使得软件范围在多数情况下对于客户和开发者都是模糊的，这是软件产品开发与其他产品开发所不一样的地方。由于软件具有可变性，因此其范围实际上是动态的。对于一个动态的范围，对其
+  > 正是由于软件本质的四个特性使得软件范围在多数情况下对于客户和开发者都是模糊的，这是软件产品开发与其他产品开发所不一样的地方。由于软件具有可变性，因此其范围实际上是动态的。对于一个动态的范围，对其进行范围管理当然是有必要的。并且由于软件范围中的2/8法则，导致一般只需要确定 20% 客户最感兴趣的部分就可以了，而不需要对所有的范围进行控制。因此进行软件范围控制在实际操作中的可行的。
 
 ------
 
@@ -43,5 +43,8 @@ keywords: 系统分析与设计, SYSU, Homework
   - 每个人的任务是明确的。必须一周后可以看到具体结果
   - 每个人的任务是1-2项
   - 至少包含一个团队活动任务
+
+  ![屏幕快照 2019-03-16 下午9.08.42](../images/屏幕快照 2019-03-16 下午9.08.42.png)
 - UML绘图工具练习（提交贴图，必须使用 UMLet）
+
   - 请在 参考书2 或 教材 中选择一个类图（给出参考书页码图号）
