--- a/_posts/2019-05-05-homework5.md
+++ b/_posts/2019-05-05-homework5.md
@@ -12,8 +12,8 @@ keywords: 系统分析与设计，SYSU，Homework
 使用 **UMLet** 建模：
 
 - 1、根据订旅馆建模文档，[Asg-RH.pdf](https://sysu-swsad.github.io/swad-guide/material/Asg_RH.pdf)：
-  - 绘制用例图模型（到子用例）![reservation](/Users/zengxianxin/Documents/GitHub/LeonhardE.github.io/images/reservation.jpg)
-  - 给出 make reservation 用例的活动图
+  - 绘制用例图模型（到子用例）![reservation](https://LeonhardE.github.io/images/reservation.jpg)
+  - 给出 make reservation 用例的活动图![makereserv](https://LeonhardE.github.io/images/makereserv.jpg)
 - 2、根据课程练习“投递员使用投递箱给收件人快递包裹”的业务场景
   - 分别用多泳道图建模三个场景的业务过程
   - 根据上述流程，给出快递柜系统最终的用例图模型
