--- a/_posts/2019-05-05-homework5.md
+++ b/_posts/2019-05-05-homework5.md
@@ -12,11 +12,19 @@ keywords: 系统分析与设计，SYSU，Homework
 使用 **UMLet** 建模：
 
 - 1、根据订旅馆建模文档，[Asg-RH.pdf](https://sysu-swsad.github.io/swad-guide/material/Asg_RH.pdf)：
+
   - 绘制用例图模型（到子用例）![reservation](https://LeonhardE.github.io/images/reservation.jpg)
   - 给出 make reservation 用例的活动图![makereserv](https://LeonhardE.github.io/images/makereserv.jpg)
+
 - 2、根据课程练习“投递员使用投递箱给收件人快递包裹”的业务场景
+
   - 分别用多泳道图建模三个场景的业务过程
+    - 场景一![2-1](https://LeonhardE.github.io/images/2-1.png)
+    - 场景二![2-2](https://LeonhardE.github.io/images/2-2.png)
+    - 场景三![2-3](https://LeonhardE.github.io/images/2-3.png)
   - 根据上述流程，给出快递柜系统最终的用例图模型
     - 用正常色彩表示第一个业务流程反映的用例
     - 用绿色背景表述第二个业务场景添加或修改的用例，以及支持 Actor
     - 用黄色背景表述第三个业务场景添加或修改的用例，以及支持 Actor
+
+  ![usecasedeliver](https://LeonhardE.github.io/images/usecasedeliver.png)
