--- a/_posts/2019-06-19-项目运营.md
+++ b/_posts/2019-06-19-项目运营.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title: 项目运营
+categories: 系统分析与设计
+description: 项目运营
+keywords: 项目运营 需求分析
+---
+
 # 项目起步遇到的一些问题
 
 ​	系统分析与设计大作业起步&需求分析的问题&思考&解决方法记录。
