--- a/_posts/2019-05-05-homework5.md
+++ b/_posts/2019-05-05-homework5.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Homework5
-categories: SYSU 系统分析与设计
+categories: 系统分析与设计
 description: 用例建模 - 业务建模方法部分作业
 keywords: 系统分析与设计，SYSU，Homework
 
