--- a/_posts/2019-05-05-homework6.md
+++ b/_posts/2019-05-05-homework6.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Homework6
-categories: SYSU 系统分析与设计
+categories: 系统分析与设计
 description: 领域建模 - 对象状态部分作业
 keywords: 系统分析与设计，SYSU，Homework
 ---
