--- a/_posts/2019-03-03-homework1.md
+++ b/_posts/2019-03-03-homework1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Homework1
-categories: SYSU 系统分析与设计
+categories: 系统分析与设计
 description: 软件的本质与软件工程科学部分作业
 keywords: 系统分析与设计, SYSU, Homework
 ---
