--- a/_posts/2019-03-15-homework2.md
+++ b/_posts/2019-03-15-homework2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Homework2
-categories: SYSU 系统分析与设计
+categories: 系统分析与设计
 description: 软件项目与知识团队管理基础部分作业
 keywords: 系统分析与设计, SYSU, Homework
 ---
