--- a/_posts/2019-04-11-homework3.md
+++ b/_posts/2019-04-11-homework3.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Homework3
-categories: SYSU 系统分析与设计
+categories: 系统分析与设计
 description: 软件项目过程模型与规划部分作业
 keywords: 系统分析与设计, SYSU, Homework
 ---
