--- a/_posts/2019-04-12-homework4.md
+++ b/_posts/2019-04-12-homework4.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Homework4
-categories: SYSU 系统分析与设计
+categories: 系统分析与设计
 description: 用例建模 - 绘制用例图部分作业
 keywords: 系统分析与设计，SYSU，Homework
 ---
