update oracle hw

--- a/_posts/2021-06-04-oracle.md
+++ b/_posts/2021-06-04-oracle.md
@@ -8,41 +8,73 @@ keywords: 数据库，SYSU，Homework
 
 1 有许多初学者会误以为 Oracle 会先把事务修改的数据放在内存缓冲区，如果“提交”则将其写入硬盘，如果“回滚”则作废，但实际上并非如此。做以下实验，创建一张很大的表(可以考虑利用笛卡尔积和批量插入)，做 delete 大部分行的操作，然后比较下此时进行提交或回滚的速度，说说你的看法。
 
+首先创建一个100000行的表
 
+![create_table](https://LeonhardE.github.io/images/oracle/create_table.png)
 
+然后删除这100000行，分别进行回滚和提交
 
+![rollback](https://LeonhardE.github.io/images/oracle/rollback.png)
 
-2 在 ITPUB 网站上有积分转账功能，在输入框输入金额，然后选择目标用户，点击“转账“按钮，系统会首先用 select 语句检查转出者是否 有足够的余额，如果没有则报错，如果有，则通过 update 语句实现转账。后来有网友发现这样的 bug，他打开两个转账页面，同时给用户甲转账 10000 积分(他账户里有 12000 积分)，在系统比较繁忙(可以通过爬网页来让网站繁忙起来)响应较慢时，他用很快的速度同时点击这两个页面的转账按钮，结果都可以转账成功，用户甲有了 20000 积分，他自己变成-8000 积分，相当于可以从系统透支，请问这是什么原因?应该怎样解决?
+![commit](https://LeonhardE.github.io/images/oracle/commit.png)
 
+可以发现回滚的速度比提交慢，这是因为回滚需要从备份中找回原来的数据，而提交不需要，因此回滚的速度往往会更慢一点。
 
+------
 
+2 在 ITPUB 网站上有积分转账功能，在输入框输入金额，然后选择目标用户，点击“转账“按钮，系统会首先用 select 语句检查转出者是否有足够的余额，如果没有则报错，如果有，则通过 update 语句实现转账。后来有网友发现这样的 bug，他打开两个转账页面，同时给用户甲转账 10000 积分(他账户里有 12000 积分)，在系统比较繁忙(可以通过爬网页来让网站繁忙起来)响应较慢时，他用很快的速度同时点击这两个页面的转账按钮，结果都可以转账成功，用户甲有了 20000 积分，他自己变成-8000 积分，相当于可以从系统透支，请问这是什么原因?应该怎样解决?
 
+造成这种问题的原因是，在同时点击转账时，由于系统相应比较慢，两个进程同时通过 select 检查都显示余额足够，然后同时 update，而没有等到一个事务结束 commit 以后，再进行下一个。解决这一问题的方法是，设置一个互斥锁，保证在同一时间内，只能有一个进程对同一个用户的账户进行操作。
 
-3 验证 Oracle 使用的是自动“行”锁。打开 sqlplus 修改 emp 表中 King 的工资为 7000，但暂时不提交，再打开另外一个 sqlplus，试下修改 Jones 的工资为 3200，改 King 的 comm 为 1000，说明下结果的意 义。
+------
 
+3 验证 Oracle 使用的是自动“行”锁。打开 sqlplus 修改 emp 表中 King 的工资为 7000，但暂时不提交，再打开另外一个 sqlplus，试下修改 Jones 的工资为 3200，改 King 的 comm 为 1000，说明下结果的意义。
 
+在一个 SQLPLUS 中修改 King 的工资为 7000 暂不提交，再打开另一个 SQLPLUS，修改 Jones 的工资可以成功，但修改 King 的 comm 则一直无法成功，如下图所示
 
+![before_com](https://LeonhardE.github.io/images/oracle/before_com.png)
 
+接着我们将第一个 SQLPLUS 中的修改 commit，之后第二个 SQLPLUS 中的 update 立刻成功了，如下图所示
+
+![after_com](https://LeonhardE.github.io/images/oracle/after_com.png)
+
+这说明 Oracle 的自动“行”锁保证了在前一个事务对某一行的操作还没有提交之前，下一个事务对同一行的修改不能进行，保证了对数据操作的安全性与一致性。
+
+------
 
 4 试验隐式提交和自动提交
 
+隐式提交是对于某些命令，不需要显式使用 commit 进行提交，而系统自动提交，如 connect：
 
+![hidden_com](https://LeonhardE.github.io/images/oracle/hidden_com.png)
 
+自动提交则需要设置 autocommit 为开启状态，然后增删改操作都将自动提交，如图所示
 
+![auto_com](https://LeonhardE.github.io/images/oracle/auto_com.png)
+
+------
 
 5 实验“死锁”，打开两个不同的 sqlplus 都用 scott 登录，形成会话 A 和会话 B，在 A 中需改 King 的工资为 8000，在 B 中修改 Jones 的工 资为 3120，然后，在 A 中修改 Jones 的工资为 3500，在 B 中修改 King 的工资为 9000，这会产生成为“死锁”的情况，A 在等 B 释放 Jones 行上的锁，B 在等 A 释放 King 行上的锁，彼此等待，就好像在窄马路上迎头狭路相逢的两辆车，看下 Oracle 是怎样解决死锁问题的?
 
+按照流程操作制造死锁，Oracle会检测出死锁的存在，并在一个 SQLPLUS 中报错，退出修改进程，使得可以提交释放行锁，以解决死锁问题，如下图所示
 
+![deadlock](https://LeonhardE.github.io/images/oracle/deadlock.png)
 
+![solvedead](https://LeonhardE.github.io/images/oracle/solvedead.png)
 
+------
 
-6 学习 select ... for update 手工加锁的用法，例如把 10 部门涉及的 行手工加锁，然后再进行 select，update 等操作看下发生了什么影响。
+6 学习 select ... for update 手工加锁的用法，例如把 10 部门涉及的行手工加锁，然后再进行 select，update 等操作看下发生了什么影响。
 
+手工加锁后，对相关行的 select 操作还能正常进行，但 update 则无法进行，需要等到上一个提交以后才可以，如下图所示
 
+![lock_before](https://LeonhardE.github.io/images/oracle/lock_before.png)
 
+![lock_after](https://LeonhardE.github.io/images/oracle/lock_after.png)
 
+------
 
-7 关于读取一致性，这是一个比较繁琐的实验。首先构造一张很大的 表 A，对 A 进行一个时间比较长(因为 A 表很大)的查询 X，例如需 要 1 分钟才出结果，在查询 X 开始 10 秒以后修改表 A 的内容，请问这个修改会影响 X 的最终输出结果吗(即读取一致性问题)?你认为 比较合乎常理的逻辑应该是怎样的?验证一下 Oracle 是否实现读取 一致性的逻辑，你觉得它是通过什么方法实现的?
+7 关于读取一致性，这是一个比较繁琐的实验。首先构造一张很大的表 A，对 A 进行一个时间比较长(因为 A 表很大)的查询 X，例如需要 1 分钟才出结果，在查询 X 开始 10 秒以后修改表 A 的内容，请问这个修改会影响 X 的最终输出结果吗(即读取一致性问题)?你认为比较合乎常理的逻辑应该是怎样的?验证一下 Oracle 是否实现读取一致性的逻辑，你觉得它是通过什么方法实现的?
 
 
 
