--- a/_posts/2021-06-18-oracle2.md
+++ b/_posts/2021-06-18-oracle2.md
@@ -8,29 +8,45 @@ keywords: 数据库，SYSU，Homework
 
 1 创建新表空间abc，建立新用户a1，用户a1建立一张位于表空间abc上的表xyz
 
+![create_space](https://LeonhardE.github.io/images/oracle/create_space.png)
 
+![create_xyz](https://LeonhardE.github.io/images/oracle/create_xyz.png)
 
 2 实验将表空间变成只读，以及把表空间切换到离线/在线状态的语句，试试在这些情况下是否还可以在此表空间下建表
 
+将表空间改为只读
 
+![readonly](https://LeonhardE.github.io/images/oracle/readonly.png)
+
+将表空间切换到离线状态
+
+![offline](https://LeonhardE.github.io/images/oracle/offline.png)
+
+将表空间切换到在线状态
+
+![online](https://LeonhardE.github.io/images/oracle/online.png)
 
 3 实验给表空间abc增加一个新的数据文件
 
-
+![datafile](https://LeonhardE.github.io/images/oracle/datafile.png)
 
 4 计算每个表空间的大小（它对应的数据文件大小之和）和空余空间大小，以及占用率（希望占用率可以用一条SQL完成计算）
 
-
+![used](https://LeonhardE.github.io/images/oracle/used.png)
 
 5 往表xyz插入大量数据，观看它所对应的segment、extent的情况。然后在xyz某个字段上建立索引，观看索引所对应的segment和extent状况
 
+![insert_data](https://LeonhardE.github.io/images/oracle/insert_data.png)
 
+![segment_xyz](https://LeonhardE.github.io/images/oracle/segment_xyz.png)
+
+![segment_idx2](https://LeonhardE.github.io/images/oracle/segment_idx2.png)
 
 6 查看当前数据库所使用的块大小
 
-
+![blocksize](https://LeonhardE.github.io/images/oracle/blocksize.png)
 
 7 查看指定用户的缺省表空间和临时表空间
 
-
+![scott_space](https://LeonhardE.github.io/images/oracle/scott_space.png)
 
